<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Drone commander</string>
    <string name="action_settings">Settings</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_display_message">Available route</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="title">Drone Commander</string>
    <string name="description">Where would you like to go?</string>

</resources>
